duplicate test class removed